# my_egui

./: Cargo.toml  readme.md
src/: button.rs  demo.rs  gauge.rs  label.rs  lib.rs  panel.rs
src/components/: control_button_value.rs  gauge.rs  mod.rs  progress_bar.rs
src/widgets/: button.rs  input.rs  mod.rs  text.rs
