[package]
name = "my_egui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "label"
path = "src/label.rs"

[[bin]]
name = "button"
path = "src/button.rs"

[[bin]]
name = "panel"
path = "src/panel.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "gauge"
path = "src/gauge.rs"

[dependencies]
egui = "0.31.0"
eframe = "0.31.0"
